--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -94,81 +94,101 @@ body{
 }
 
 .container {
-    position: fixed;
-    top: 0px;
-    z-index: 2;
+  position: fixed;
+  top: 0px;
+  z-index: 2;
 }
+
+.menu_div {
+  display: flex;
+  align-items: center;
+  margin-left: -7px;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 70px;
+  width: 100vw;
+  background-color: #000000;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #ff0000;
+  @media (max-width: 767px) {
+      height: 50px;
+  }
+}
+
+.menu_div_col1 {
+  flex-basis: 30%;
+  @media (max-width: 767px) {
+      flex-basis: 25%;
+  }
+}
+
+.menu_div_col2 {
+  flex-basis: 50%;
+  display: flex;
+  justify-content: space-evenly;
   
-  .menu_div {
+  @media (max-width: 767px) {
+      flex-basis: 55%;
+  }
+}
+
+.menu_div_col3 {
+  flex-basis: 20%;
+  div {
     display: flex;
     align-items: center;
-    margin-left: -7px;
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 70px;
-    width: 100vw;
-    background-color: #000000;
-    border-bottom-style: solid;
-    border-width: 1px;
-    border-color: #ff0000;
-
-    @media (max-width: 767px) {
-        height: 50px;
-    }
-
-  }
-  
-  .menu_div_col1 {
-    flex-basis: 30%;
-
-    @media (max-width: 767px) {
-        flex-basis: 25%;
-    }
-
-  }
-  
-  .menu_div_col2 {
-    flex-basis: 50%;
-    display: flex;
-    justify-content: space-evenly;
-    
-    @media (max-width: 767px) {
-        flex-basis: 55%;
-    }
-
-  }
-  
-  .menu_div_col3 {
-    flex-basis: 20%;
-    div {
-      display: flex;
-      align-items: center;
-      width: 100%;
-      img {
-        height: 50px;
-        width: 50px;
-        border-radius: 50%;
-        margin-right: 15px;
-
-        @media (max-width: 767px) {
-            height: 25px;
-            width: 25px;
-            margin-right: 0px;
-        }
-
-      }
-
-      span {
-        margin-left: 10px;
-        text-decoration: none;
-        color: gray;
-        cursor: pointer;
-
-        &:hover {
-            color: #FFFFFF;
-        }
-  
+    width: 100%;
+    img {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      margin-right: 15px;
+      @media (max-width: 767px) {
+          height: 25px;
+          width: 25px;
+          margin-right: 0px;
       }
     }
+    span {
+      margin-left: 10px;
+      text-decoration: none;
+      color: gray;
+      cursor: pointer;
+      &:hover {
+          color: #FFFFFF;
+      }
+
+    }
   }
+}
+
+.button-marvel {
+  text-align: center;
+  color: #FFFFFF !important;
+  font-family: Kastelov_Regular;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  cursor: pointer;
+  background-color: #ff0000;
+  border-style: none;
+  border-radius: 100px;
+  width: 34vh;  
+}
+
+.input-marvel {
+  border-style: none;
+  margin-bottom: 15px;
+  border-radius: 150px;
+  width: 30vh;
+  padding: 2vh;
+}
+
+.checkbox-marvel {
+  margin-right: 10px;
+  outline-style: solid;
+  outline-color: #ff0000;
+  outline-width: 1px;
+}
   
